--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -3,20 +3,22 @@
     height: auto;
     margin: 0 auto;
 
-    border: 1px solid red;
+    
     nav{
         width: 100%;
-        height: auto;
+        height: 8vh;
         display: flex;
         justify-content: space-between;
+        align-items: center;
         ul{
             width: auto;
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 10px;
+            gap: 56px;
             li{
-
+                font-size: 18px;
+                font-weight: 500;
             }
         }
     }
