--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,7 @@
   list-style: none;
   text-decoration: none;
 }
+@font-face {
+  font-family: InterBold;
+  src: url('/fonts/inter/Inter_24pt-Bold.ttf') format('truetype');
+}
