--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,13 +1,15 @@
+
 .header-container{
-max-width: 1200px;
+max-width: 1280px;
 height: auto;
 margin: 0 auto;
 .header{
     width: 100%;
-    height: 85vh;
+    height: 660px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+   
     .header-img{
         width:45% ;
         height: 100%;
@@ -52,6 +54,7 @@ margin: 0 auto;
             h2{
                 font-size: 25px;
                 font-weight: 500;
+                margin-bottom: 25px;
 
             }
             .header-shipment-input{
@@ -59,6 +62,7 @@ margin: 0 auto;
                 height: auto;
                 display: flex;
                 justify-content: space-between;
+             
                 .input-left{
                     width: 49%;
                     height: auto;
@@ -69,7 +73,7 @@ margin: 0 auto;
                            outline: none;
                            border-radius: 18px;
                            border: 1px solid grey;
-                           margin-bottom:10px ;
+                           margin-bottom:12px ;
                           }
                           .type{
                              width: 100%;
